--- a/projectLicensec/index.html
+++ b/projectLicensec/index.html
@@ -131,22 +131,22 @@
                         </a>
                     </div>
                     <div class="grid-item">
-                        <div class="grid-item__inner">
+                        <a  href="./projectStandarts/index.html"  class="grid-item__inner">
                             <img src="./src/img/ФОТО для нормативных документов/Стандарты.jpg" alt="" class="grid-item__img">
                             <div class="grid-item__tittle">
                                 <span>Стандарты
                                 </span>
                             </div>
-                        </div>
+                        </a>
                     </div>
                     <div class="grid-item">
-                        <div class="grid-item__inner">
+                        <a href="./projectRulesNorm/index.html" class="grid-item__inner">
                             <img src="./src/img/ФОТО для нормативных документов/Строительные нормы и правила.jpg" alt="" class="grid-item__img">
                             <div class="grid-item__tittle">
                                 <span> Строительные нормы и правила
                                 </span>
                             </div>
-                        </div>
+                        </a>
                     </div>
                 </div>
             </div>
