--- a/projectLicensec/projectStandarts/index.html
+++ b/projectLicensec/projectStandarts/index.html
@@ -28,55 +28,55 @@
 
                     </div>
                     <nav class="header-nav">
-                        <a href="../index.html" class="header-nav__logo">
+                        <a href="../../index.html" class="header-nav__logo">
                             <img src="./src/img/HIW/logo.png" alt="" class="header-nav__img">
                         </a>
                         <div class="header-nav__menu">
-                            <a href="../index.html" class="header-nav__menu-item">Главная</a>
-                            <a href="../projectAbout/index.html" class="header-nav__menu-item">О компании</a>
+                            <a href="../../index.html" class="header-nav__menu-item">Главная</a>
+                            <a href="../../projectAbout/index.html" class="header-nav__menu-item">О компании</a>
                             <ul>
                                 <li>
-                                    <a href="../projectServis/index.html" class="header-nav__menu-item">Услуги <i
+                                    <a href="../../projectServis/index.html" class="header-nav__menu-item">Услуги <i
                                             class="fa-solid fa-chevron-down" id="down"></i> </a>
                                     <ul>
-                                        <li><a href="../projectServis/projectServis1/index.html">1 Разработка специальных технических
+                                        <li><a href="../../projectServis/projectServis1/index.html">1 Разработка специальных технических
                                                 условий</a></li>
-                                        <li><a href="../projectServis/projectServis2/index.html">2 Проектирование систем
+                                        <li><a href="../../projectServis/projectServis2/index.html">2 Проектирование систем
                                                 автоматического пожаротушения,
                                                 автоматической пожарной сигнализации и оповещения о пожаре</a></li>
-                                        <li><a href="../projectServis/projectServis3/index.html">3 Консультации, рассмотрение проектов на соответствие
+                                        <li><a href="../../projectServis/projectServis3/index.html">3 Консультации, рассмотрение проектов на соответствие
                                                 требованиям
                                                 пожарной безопасности</a></li>
-                                        <li><a href="../projectServis/projectServis4/index.html">4 Расчет времени эвакуации людей при пожаре и моделирование
+                                        <li><a href="../../projectServis/projectServis4/index.html">4 Расчет времени эвакуации людей при пожаре и моделирование
                                                 опасных факторов пожара</a></li>
-                                        <li><a href="../projectServis/projectServis5/index.html">5 Оценка пожарного риска</a></li>
-                                        <li><a href="../projectServis/projectServis6/index.html">6 Разработка раздела проекта «Мероприятия по обеспечению пожарной
+                                        <li><a href="../../projectServis/projectServis5/index.html">5 Оценка пожарного риска</a></li>
+                                        <li><a href="../../projectServis/projectServis6/index.html">6 Разработка раздела проекта «Мероприятия по обеспечению пожарной
                                                 безопасности» (ППМ)</a></li>
-                                        <li><a href="../projectServis/projectServis7/index.html">7 Разработка раздела проекта Система обеспечения комплексной
+                                        <li><a href="../../projectServis/projectServis7/index.html">7 Разработка раздела проекта Система обеспечения комплексной
                                                 безопасности и антитеррористической защищенности</a></li>
-                                        <li><a href="../projectServis/projectServis8/index.html">8 Разработка раздела проекта Инженерно-технические мероприятия по
+                                        <li><a href="../../projectServis/projectServis8/index.html">8 Разработка раздела проекта Инженерно-технические мероприятия по
                                                 гражданской обороне (ИТМ ГО)</a></li>
-                                        <li><a href="../projectServis/projectServis9/index.html">9 Определение категорий по взрыво-пожарной опасности</a></li>
+                                        <li><a href="../../projectServis/projectServis9/index.html">9 Определение категорий по взрыво-пожарной опасности</a></li>
                                     </ul>
                                 </li>
 
                             </ul>
                             <ul>
                                 <li>
-                                    <a href="../projectProject/index.html" class="header-nav__menu-item">Реализованные
+                                    <a href="../../projectProject/index.html" class="header-nav__menu-item">Реализованные
                                         проекты <i class="fa-solid fa-chevron-down" id="down"></i></a>
                                         <ul>
-                                            <li><a href="../projectProject/projectProject1/index.html">1. Жилищно-гражданского назначения</a></li>
-                                            <li><a href="../projectProject/projectProject2/index.html">2. Производственного назначения</a></li>
+                                            <li><a href="../../projectProject/projectProject1/index.html">1. Жилищно-гражданского назначения</a></li>
+                                            <li><a href="../../projectProject/projectProject2/index.html">2. Производственного назначения</a></li>
                                         </ul>
                                 </li>
 
                             </ul>
 
-                            <a href="#" class="header-nav__menu-item">нормативные
+                            <a href="../../projectLicensec/index.html" class="header-nav__menu-item">нормативные
                                 документы</a>
-                            <a href="../projectReviews — копия/index.html" class="header-nav__menu-item">Наука</a>
-                            <a href="../projectContacts/index.html" class="header-nav__menu-item">Контакты</a>
+                            <a href="../../projectReviews — копия/index.html" class="header-nav__menu-item">Наука</a>
+                            <a href="../../projectContacts/index.html" class="header-nav__menu-item">Контакты</a>
                         </div>
                     </nav>
                 </div>
@@ -108,11 +108,13 @@
                       <tr>
                         <td class="number">1</td>
                         <td>СТ РК 1794 - 2008 ТЕХНИКА ПОЖАРНАЯ. СРЕДСТВА СПАСАТЕЛЬНЫЕ ПОЖАРНЫЕ. УСТРОЙСТВА СПАСАТЕЛЬНЫЕ ПРЫЖКОВЫЕ ПОЖАРНЫЕ. ОБЩИЕ ТЕХНИЧЕСКИЕ ТРЕБОВАНИЯ. МЕТОДЫ ИСПЫТАНИЙ..pdf</td>
-                        <td><a href="https://drive.google.com/file/d/1EhRmNwlhp3O_bnI6quQjKZ46PwYKA99s"><img src="./src/img/pdf.png" alt="" class="pdf"/></a> </td>
+                        <td><a href="https://drive.google.com/file/d/1EhRmNwlhp3O_bnI6quQjKZ46PwYKA99s"><img src="./src/img/pdf.png" alt="" class="pdf"></a> </td>
                       </tr>
-                      <tr><td class="number">2</td><td>СТ РК 3020-2017 БЕЗОПАСНОСТЬ ПОЖАРНАЯ. ОЦЕНКА ПОЖАРНОГО РИСКА. МЕТОД ОПРЕДЕЛЕНИЯ РАСЧЕТНЫХ ВЕЛИЧИН ПОЖАРНОГО РИСКА В ЗДАНИЯХ И СООРУЖЕНИЯХ РАЗЛИЧНЫХ КЛАССОВ ФУНКЦИОНАЛЬНОЙ ПОЖАРНОЙ ОПАСНОСТИ.pdf</td><td><a href="https://drive.google.com/file/d/1TACoVFYJk4MgHN1MHXHssYOSW_zSqE8O"><img src="./src/img/pdf.png" alt="" class="pdf"/></a> </td></tr>
-                      <tr><td class="number">3</td><td>СТ РК 2881-2- 2016 ОЦЕНКА ПОЖАРНОГО РИСКА. ВЫБОР СЦЕНАРИЯ ПОЖАРА.pdf</td><td><a href="https://drive.google.com/file/d/1nEcfqLXBPBfEi6Z2bJYckP7CC_IiyeEQ"><img src="./src/img/pdf.png" alt="" class="pdf"/></a> </td></tr>
-                      <tr><td class="number">4</td><td>СТ РК 2881-3 - 2016 ОЦЕНКА ПОЖАРНОГО РИСКА. ОПАСНЫЕ ФАКТОРЫ ПОЖАРА.pdf</td><td><a href="https://drive.google.com/file/d/1-qqYd32VRMEc7GcHPEwGWjSTmkfDIwSh"><img src="./src/img/pdf.png" alt="" class="pdf"/></a> </td></tr>
+                      <tr>
+                        <td class="number">2</td><td>СТ РК 3020-2017 БЕЗОПАСНОСТЬ ПОЖАРНАЯ. ОЦЕНКА ПОЖАРНОГО РИСКА. МЕТОД ОПРЕДЕЛЕНИЯ РАСЧЕТНЫХ ВЕЛИЧИН ПОЖАРНОГО РИСКА В ЗДАНИЯХ И СООРУЖЕНИЯХ РАЗЛИЧНЫХ КЛАССОВ ФУНКЦИОНАЛЬНОЙ ПОЖАРНОЙ ОПАСНОСТИ.pdf</td><td><a href="https://drive.google.com/file/d/1TACoVFYJk4MgHN1MHXHssYOSW_zSqE8O"><img src="./src/img/pdf.png" alt="" class="pdf"></a> </td>
+                    </tr>
+                      <tr><td class="number">3</td><td>СТ РК 2881-2- 2016 ОЦЕНКА ПОЖАРНОГО РИСКА. ВЫБОР СЦЕНАРИЯ ПОЖАРА.pdf</td><td><a href="https://drive.google.com/file/d/1nEcfqLXBPBfEi6Z2bJYckP7CC_IiyeEQ"><img src="./src/img/pdf.png" alt="" class="pdf"></a> </td></tr>
+                      <tr><td class="number">4</td><td>СТ РК 2881-3 - 2016 ОЦЕНКА ПОЖАРНОГО РИСКА. ОПАСНЫЕ ФАКТОРЫ ПОЖАРА.pdf</td><td><a href="https://drive.google.com/file/d/1-qqYd32VRMEc7GcHPEwGWjSTmkfDIwSh"><img src="./src/img/pdf.png" alt="" class="pdf"></a> </td></tr>
                       <tr><td class="number">5</td><td>СТ РК 2881-1 - 2016 ОЦЕНКА ПОЖАРНОГО РИСКА. ОБЩИЕ ПОЛОЖЕНИЯ.pdf</td><td><a href="https://drive.google.com/file/d/12L7NE5fYj9yreFl_WR14ObJQjW5xzV-r"><img src="./src/img/pdf.png" alt="" class="pdf"/></a> </td></tr>
                       <tr><td class="number">6</td><td>СТ СЭВ 446-77 ПРОТИВОПОЖАРНЫЕ НОРМЫ СТРОИТЕЛЬНОГО ПРОЕКТИРОВАНИЯ. МЕТОДИКА ОПРЕДЕЛЕНИЯ РАСЧЕТНОЙ ПОЖАРНОЙ НАГРУЗКИ.pdf</td><td><a href="https://drive.google.com/file/d/1bRI27c3x3UtNkJcltx2B-mZFtuYx_WSA"><img src="./src/img/pdf.png" alt="" class="pdf"/></a> </td></tr>
                       <tr><td class="number">7</td><td>СТ СЭВ 383-87 ПОЖАРНАЯ БЕЗОПАСНОСТЬ В СТРОИТЕЛЬСТВЕ. ТЕРМИНЫ И ОПРЕДЕЛЕНИЯ.pdf</td><td><a href="https://drive.google.com/file/d/1iuz1lz0FWVRUaG5LVJvQUbwGCE5Rd0dn"><img src="./src/img/pdf.png" alt="" class="pdf"/></a> </td></tr>
@@ -125,7 +127,13 @@
                       <tr><td class="number">14</td><td>СТ РК 1902 - 2009 ТЕХНИКА ПОЖАРНАЯ. УСТАНОВКИ ГАЗОВОГО ПОЖАРОТУШЕНИЯ АВТОМАТИЧЕСКИЕ. МОДУЛИ И БАТАРЕИ. ОБЩИЕ ТЕХНИЧЕСКИЕ ТРЕБОВАНИЯ. МЕТОДЫ ИСПЫТАНИЙ.pdf</td><td><a href="https://drive.google.com/file/d/1a1irwbg6S5TOEb60ZeFtaYPSa3hZf-Tg"><img src="./src/img/pdf.png" alt="" class="pdf"/></a> </td></tr>
                       <tr><td class="number">15</td><td>СТ РК 1899 - 2009 ТЕХНИКА ПОЖАРНАЯ. УСТАНОВКИ ВОДЯНОГО ПОЖАРОТУШЕНИЯ АВТОМАТИЧЕСКИЕ. ОБЩИЕ ТЕХНИЧЕСКИЕ ТРЕБОВАНИЯ. МЕТОДЫ ИСПЫТАНИЙ.pdf</td><td><a href="https://drive.google.com/file/d/1T9RbDz-Xg7u0ipvckwpdxiHZDEnfpRWB"><img src="./src/img/pdf.png" alt="" class="pdf"/></a> </td></tr>
                       <tr><td class="number">16</td><td>СТ РК 1979 - 2010 ТЕХНИКА ПОЖАРНАЯ. УСТАНОВКИ ВОДЯНОГО И ПЕННОГО ПОЖАРОТУШЕНИЯ АВТОМАТИЧЕСКИЕ..pdf</td><td><a href="https://drive.google.com/file/d/1qBxlh7vb8u_XXwo78E-Fh-mTyOer7m41"><img src="./src/img/pdf.png" alt="" class="pdf"/></a> </td></tr>
-                      <tr><td class="number">17</td><td>СТ РК 1978 - 2010 ТЕХНИКА ПОЖАРНАЯ. УСТАНОВКИ ВОДЯНОГО И ПЕННОГО ПОЖАРОТУШЕНИЯ АВТОМАТИЧЕСКИЕ..pdf</td><td><a href="https://drive.google.com/file/d/1lFo3fTShi8udJFxxNHwctcN98g7OcJaS"><img src="./src/img/pdf.png" alt="" class="pdf"/></a> </td></tr>
+                      <tr>
+                        <td class="number">17</td>
+                        <td>СТ РК 1978 - 2010 ТЕХНИКА ПОЖАРНАЯ. УСТАНОВКИ ВОДЯНОГО И ПЕННОГО ПОЖАРОТУШЕНИЯ АВТОМАТИЧЕСКИЕ..pdf</td>
+                        <td><a href="https://drive.google.com/file/d/1lFo3fTShi8udJFxxNHwctcN98g7OcJaS">
+                            <img src="./src/img/pdf.png" alt="" class="pdf"/></a>
+                         </td>
+                    </tr>
                       <tr><td class="number">18</td><td>СТ РК 1977 - 2010 ТЕХНИКА ПОЖАРНАЯ. УСТАНОВКИ ВОДЯНОГО И ПЕННОГО ПОЖАРОТУШЕНИЯ АВТОМАТИЧЕСКИЕ. ОПОВЕЩАТЕЛИ ПОЖАРНЫЕ ЗВУКОВЫЕ ГИДРАВЛИЧЕСКИЕ. ОБЩИЕ ТЕХНИЧЕСКИЕ УСЛОВИЯ.pdf</td><td><a href="https://drive.google.com/file/d/1JwsmBVSeGCWYq4SZ-VXbGE_Z0f-RKihk"><img src="./src/img/pdf.png" alt="" class="pdf"/></a> </td></tr>
                       <tr><td class="number">19</td><td>СТ РК 1718-2007 ТЕХНИКА ПОЖАРНАЯ. ОБОРУДОВАНИЕ ПОЖАРНОЕ. СТВОЛЫ ПОЖАРНЫЕ РУЧНЫЕ..pdf</td><td><a href="https://drive.google.com/file/d/1jDDp35RXeWsO8kej6vGaQoW5hDOTA_8Y"><img src="./src/img/pdf.png" alt="" class="pdf"/></a> </td></tr>
                       <tr><td class="number">20</td><td>СТ РК 1717-2007 ТЕХНИКА ПОЖАРНАЯ. ОБОРУДОВАНИЕ ПОЖАРНОЕ. СТВОЛЫ ПОЖАРНЫЕ ЛАФЕТНЫЕ КОМБИНИРОВАННЫЕ. ОБЩИЕ ТЕХНИЧЕСКИЕ ТРЕБОВАНИЯ. МЕТОДЫ ИСПЫТАНИЙ.pdf</td><td><a href="https://drive.google.com/file/d/1wQxUfAR_UEBv3Bb1X-0e4fWdUIA2nm9p"><img src="./src/img/pdf.png" alt="" class="pdf"/></a> </td></tr>
