--- a/index.html
+++ b/index.html
@@ -17,9 +17,7 @@
         <video autoplay muted loop id="videoBackground">
             <source src="./src/video/bg.mp4">
         </video>
-        <div class="cont">
-            <div id="blackscreenVideo"></div>
-        </div>
+        <div class="cont"></div>
         <div class="header_dark">
             <div class="container">
                 <div class="navigation" id="navigation">
