--- a/index.html
+++ b/index.html
@@ -15,16 +15,10 @@
 <body style="opacity:0; transition: all .5s ease;">
     
     <header class="header"> 
-<<<<<<< HEAD
-        <div class="cont">   
-=======
         <video autoplay muted loop id="videoBackground">
             <source src="./src/video/bg.mp4">
         </video>
-        <div class="cont">
-            <div id="blackscreenVideo"></div>
->>>>>>> e916e1d (added background video to the page)
-        </div>
+        <div class="cont"></div>
         <div class="cont"></div>
         <div class="header_dark">
             <div class="container">
