added adapt styles for 740*360

--- a/projectServis/projectServis1/index.html
+++ b/projectServis/projectServis1/index.html
@@ -24,11 +24,11 @@
     
                     </div>
                     <nav class="header-nav">
-                        <a href="../index.html" class="header-nav__logo">
+                        <a href="../../index.html" class="header-nav__logo">
                             <img src="./src/img/HIW/logo.png" alt="" class="header-nav__img">
                         </a>
                         <div class="header-nav__menu">
-                            <a href="../index.html" class="header-nav__menu-item">Главная</a>
+                            <a href="../../index.html" class="header-nav__menu-item">Главная</a>
                             <a href="../projectAbout/index.html" class="header-nav__menu-item">О компании</a>
                             <ul>
                                 <li>
