--- a/index.html
+++ b/index.html
@@ -15,6 +15,9 @@
 <body style="opacity:0; transition: all .5s ease;">
     
     <header class="header"> 
+        <video autoplay muted loop id="videoBackground">
+            <source src="./src/video/bg.mp4">
+        </video>
         <div class="cont">   
         </div>
         <div class="cont"></div>
