Fixed a few things

--- a/projectAbout/index.html
+++ b/projectAbout/index.html
@@ -9,6 +9,7 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@fancyapps/ui/dist/fancybox.css">
     <link rel="stylesheet" href="https://unpkg.com/swiper/swiper-bundle.min.css">
     <link rel="stylesheet" href="./src/css/style.css">
+    <link rel="stylesheet" href="./src/css/additional_styles.css">
 </head>
 
 <body style="opacity:0;transition:all .5s ease;">
@@ -107,12 +108,12 @@
     <main class="main">
         <section class="home">
             <div class="container">
-                <div class="home__text">
+                <div class="home__text white-text">
                     О компании
-                    <div class="home__text1">«Расходы на предупреждение пожара значительно ниже его последствий»</div> 
+                    <div class="home__text1 white-text">«Расходы на предупреждение пожара значительно ниже его последствий»</div>
                 </div>
                 <div class="home__cont">
-                    <div class="home__cont_text">
+                    <div class="home__cont_text white-text">
                         <p> <span></span> Наша компания специализируется на обеспечении пожарной безопасности объектов на всех этапах его существования, начиная от проектирования и заканчивая его эксплуатацией.
                             Ведь некому не секрет, что работать удобнее и выгодней с одной компанией, которая защитит Ваш бизнес от пожара, материального ущерба, вреда жизни и здоровью Ваших сотрудников.</p>
                             <p> <span></span>Сотрудники нашей компании являются высококвалифицированными специалистами имеющие колоссальный опыт, в области противопожарной защиты, на всех этапах жизнедеятельности   объектов начиная от нефтегазовой отрасли и заканчивая гражданским строительством. 
