--- a/projectReviews — копия/index.html
+++ b/projectReviews — копия/index.html
@@ -10,6 +10,7 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@fancyapps/ui/dist/fancybox.css">
     <link rel="stylesheet" href="https://unpkg.com/swiper/swiper-bundle.min.css">
     <link rel="stylesheet" href="./src/css/style.css">
+    <link rel="stylesheet" href="./src/css/additional_styles.css">
 </head>
 
 <body style="opacity:0;transition:all .5s ease;">
@@ -116,12 +117,12 @@
     <main class="main">
         <section class="home">
             <div class="container">
-                <div class="home__text">
+                <div class="home__text white-text">
                     Наука
                 </div>
                 <div class="home__cont">
                     <img src="./src/img/HIW/Фото профессора.jpeg" alt="" class="home__cont_img">
-                    <div class="home__cont_text">
+                    <div class="home__cont_text white-text">
                         Компания GFP занимается провидением прикладных и экспериментальных исследований в области
                         пожарной безопасности.
                         Проводимые исследования стали генератором инновационных проектных решений способствующих
@@ -146,7 +147,7 @@
         </section>
         <section class="tasks">
             <div class="container">
-                <div class="tasks__title">Под его руководством были проведены следующие научно-исследовательские работы:
+                <div class="tasks__title white-text">Под его руководством были проведены следующие научно-исследовательские работы:
                 </div>
                 <div class="tasks__container">
                     <div class="tasks__container_work">
