--- a/projectServis/projectServis1/index.html
+++ b/projectServis/projectServis1/index.html
@@ -9,6 +9,11 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@fancyapps/ui/dist/fancybox.css">
     <link rel="stylesheet" href="https://unpkg.com/swiper/swiper-bundle.min.css">
     <link rel="stylesheet" href="./src/css/style.css">
+    <style>
+        span {
+            margin-left: 44px;
+        }
+    </style>
 </head>
 <body style="opacity:0;transition:all .5s ease;">
     <header class="header">
@@ -29,7 +34,7 @@
                         </a>
                         <div class="header-nav__menu">
                             <a href="../../index.html" class="header-nav__menu-item">Главная</a>
-                            <a href="../projectAbout/index.html" class="header-nav__menu-item">О компании</a>
+                            <a href="../../projectAbout/index.html" class="header-nav__menu-item">О компании</a>
                             <ul>
                                 <li>
                                     <a href="../index.html" class="header-nav__menu-item">Услуги <i class="fa-solid fa-chevron-down" id="down"></i> </a>
