--- a/projectServis/index.html
+++ b/projectServis/index.html
@@ -9,6 +9,7 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@fancyapps/ui/dist/fancybox.css">
     <link rel="stylesheet" href="https://unpkg.com/swiper/swiper-bundle.min.css">
     <link rel="stylesheet" href="./src/css/style.css">
+    <link rel="stylesheet" href="./src/css/additional_styles.css">
 </head>
 
 <body style="opacity:0;transition:all .5s ease;">
@@ -93,7 +94,7 @@
     <main class="main">
         <section class="home">
             <div class="container">
-                <div class="home__text">
+                <div class="home__text white-text">
                     Услуги компании
                 </div>
                 <div class="gallery-grid">
