--- a/projectServis/projectServis6/index.html
+++ b/projectServis/projectServis6/index.html
@@ -10,6 +10,11 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@fancyapps/ui/dist/fancybox.css">
     <link rel="stylesheet" href="https://unpkg.com/swiper/swiper-bundle.min.css">
     <link rel="stylesheet" href="./src/css/style.css">
+    <style>
+        span {
+            margin-left: 44px;
+        }
+    </style>
 </head>
 
 <body style="opacity:0;transition:all .5s ease;">
