--- a/projectServis/projectServis4/index.html
+++ b/projectServis/projectServis4/index.html
@@ -4,8 +4,9 @@
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="description" content="Расчет времени эвакуации людей при пожаре и моделирование опасных факторов пожара">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>GLOBAL FIRE PROTECTION</title>
+    <title>Расчет времени эвакуации... | GLOBAL FIRE PROTECTION</title>
     <link rel="shortcut icon" href="./src/img/HIW/logo.png" type="image/png">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@fancyapps/ui/dist/fancybox.css">
     <link rel="stylesheet" href="https://unpkg.com/swiper/swiper-bundle.min.css">
