--- a/projectServis/projectServis8/index.html
+++ b/projectServis/projectServis8/index.html
@@ -4,8 +4,9 @@
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="description" content="Разработка раздела проектной документации «Инженерно-технические мероприятия гражданской обороны. Мероприятия по предупреждению чрезвычайных ситуаций» (ИТМ ГО)">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>GLOBAL FIRE PROTECTION</title>
+    <title>Разработка раздела проектной документации... | GLOBAL FIRE PROTECTION</title>
     <link rel="shortcut icon" href="./src/img/HIW/logo.png" type="image/png">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@fancyapps/ui/dist/fancybox.css">
     <link rel="stylesheet" href="https://unpkg.com/swiper/swiper-bundle.min.css">
