--- a/projectReviews — копия/index.html
+++ b/projectReviews — копия/index.html
@@ -123,7 +123,7 @@
                 <div class="home__cont">
                     <img src="./src/img/HIW/Фото профессора.jpeg" alt="" class="home__cont_img">
                     <div class="home__cont_text white-text">
-                        Компания GFP занимается провидением прикладных и экспериментальных исследований в области
+                        Компания GFP занимается проведением прикладных и экспериментальных исследований в области
                         пожарной безопасности.
                         Проводимые исследования стали генератором инновационных проектных решений способствующих
                         развитию отраслей строительства, обеспечивая современными подходами обеспечения пожарной
@@ -138,7 +138,7 @@
                         сотрудники компании имеют научные звания и степени.
                         Со дня основании компании опубликовано, 22 научных статьи 15 из них являются тезисами докладов
                         на различных международных научно-практических конференциях.
-                        Получено 5 патентов на
+                        Получено 5 патентов.
                         Руководителем научно-исследовательского направления компании является профессор, кандидат
                         технических наук Джумагалиев Руслан Маркленович.
                     </div>
