--- a/projectAbout/index.html
+++ b/projectAbout/index.html
@@ -117,7 +117,7 @@
                         <p> <span></span> Наша компания специализируется на обеспечении пожарной безопасности объектов на всех этапах его существования, начиная от проектирования и заканчивая его эксплуатацией.
                             Ведь никому не секрет, что работать удобнее и выгоднее с одной компанией, которая защитит Ваш бизнес от пожара, материального ущерба, вреда жизни и здоровью Ваших сотрудников.</p>
                             <p> <span></span>Сотрудники нашей компании являются высококвалифицированными специалистами имеющие колоссальный опыт, в области противопожарной защиты, на всех этапах жизнедеятельности   объектов начиная от нефтегазовой отрасли и заканчивая гражданским строительством. 
-                                При выполнении поставленных задач, сотрудники компании использует передовые методы, что позволяет принимать оптимальные и экономически целесообразные решения по обеспечению пожарной безопасности   объектов при проектировании.</p>
+                                При выполнении поставленных задач, сотрудники компании используют передовые методы, что позволяет принимать оптимальные и экономически целесообразные решения по обеспечению пожарной безопасности   объектов при проектировании.</p>
                                 <p> <span></span></p>
                     </div>
                 </div>
